@@ -63,7 +63,7 @@ static int session_included(request_rec * r, session_dir_conf * conf)
         included = 0;
         for (i = 0; !included && i < conf->includes->nelts; i++) {
             const char *include = includes[i];
-            if (strncmp(r->parsed_uri.path, include, strlen(include))) {
+            if (strncmp(r->uri, include, strlen(include))) {
                 included = 1;
             }
         }
@@ -72,7 +72,7 @@ static int session_included(request_rec * r, session_dir_conf * conf)
     if (conf->excludes->nelts) {
         for (i = 0; included && i < conf->includes->nelts; i++) {
             const char *exclude = excludes[i];
-            if (strncmp(r->parsed_uri.path, exclude, strlen(exclude))) {
+            if (strncmp(r->uri, exclude, strlen(exclude))) {
                 included = 0;
             }
         }
